data/objects/Invoice_Item_CEN__c.object
<CustomObject>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Cost_Avoidance__c</fullName>
        <label>Gross Savings</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Less_Previous__c</fullName>
        <label>Current Less Previous</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D365InvoiceItemGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365InvoiceItemGuid</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_Type__c</fullName>
        <label>Invoice Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Fee</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Performance Fee</fullName>
                </value>
                <value>
                    <fullName>Split Fee</fullName>
                </value>
                <value>
                    <fullName>Split Performance Fee</fullName>
                </value>
                <value>
                    <fullName>Termination Fee</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Turnkey Credit</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Turnkey Performance Fee</fullName>
                </value>
                <value>
                    <fullName>Split Base Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice_CEN__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Period_Date__c</fullName>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Cost_Avoidance__c</fullName>
        <label>Previous Cost Avoidance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Special_Savings__c</fullName>
        <label>Previous Special Savings</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <label>Savings %</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Savings__c</fullName>
        <label>Special Savings</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <label>Invoice Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>